# RAG-AssistBot

./: .gitignore  chatbot.py  conf.toml  demo.py  indexing.py  llm_client.py  main.py  pyproject.toml  rag_info.md  requirements.txt  retrieval_tools.py  start_deploy.sh  stop_deploy.sh  test.ipynb  test.py  test_connection.py  utils.py
.secrets/: config.toml
.streamlit/: secrets.toml
data/: preguntas-POPT-Por defecto en POPT-20241113-1424.doc
documentacion/: graph_rag.md  rag_info.md
documentation/: TODOS.txt  examples_splitters.md  jerarquia_leyes.md  rag_info.md
libs/: TODOS.txt  basic_document_loader.py  basic_document_processor.py  basic_document_storage.py  basic_text_splitter.py  chatbot.py  document_indexer.py  document_loader.py  hybrid_retriever.py  lexical_retriever.py  lexical_store.py  pdf_loader.py  retriever.py  store.py  text_processor.py  utils.py  vector_retriever.py  vector_store.py
libs/abstract_models/: database_loader.py  document_loader.py  document_processor.py  document_storage.py  file_loader.py  retriever.py  text_splitter.py
libs/agent/: chatbot.py
libs/loaders/: pdf_loader.py  postgres_loader.py
libs/prompts/: legal_assistant_prompt.py
libs/retrieval/: hybrid_retriever.py  lexical_retriever.py  vector_retriever.py
libs/splitters/: basic_text_splitter.py  contextual_splitter.py  law_splitter.py
libs/storage/: basic_document_storage.py
prompts/: academic_assistant_prompt.py  prompt.py
test/: test.ipynb  test.py
